# switch-oss

./: NetFrontBrowserNX_OSSCopyright.txt  README.md
NSPR/: .hg_archival.txt  .hgtags  NSPR_modified.txt
NSPR/lib/ds/: plarena.h
NSS/: .hg_archival.txt  NSS_modified.txt
WKC/include/: autotoolsconfig.h  wkccairorename.h  wkcclibwrapper.h  wkcglobalwrapper.h  wkcplatform.h
WKC/system/: WKCSystem.cpp  WKCSystem.h
WKC_0.15.0/include/: wkcclibwrapper.h  wkcglobalwrapper.h
WKC_0.15.0/system/: WKCSystem.h
WKC_0.16.0/include/: wkcclibwrapper.h  wkcglobalwrapper.h  wkcplatform.h
WKC_0.19.0/include/: wkcglobalwrapper.h
WKC_0.22.0/include/: wkcplatform.h
WKC_0.23.2/include/: wkccairorename.h
WKC_1.15.4/include/: wkcclibwrapper.h  wkcglobalwrapper.h
WKC_1.15.4/system/: WKCSystem.cpp
WKC_1.16.10/include/: wkccairorename.h  wkcglobalwrapper.h
WKC_1.19.3/include/: wkccairorename.h  wkcglobalwrapper.h
WKC_1.19.3/system/: WKCSystem.cpp
WKC_2.23.3/include/: wkcglobalwrapper.h
WKC_2.23.6/include/: autotoolsconfig.h  wkcclibwrapper.h  wkcicu4crename.h
WebKitLibraries/cairo/: ChangeLog  ChangeLog.pre-1.14  Changelog-ACCESS  Makefile.in  NEWS  README  RELEASING  aclocal.m4  config.h  config.h.in  configure  configure.ac
WebKitLibraries_0.15.0/cairo/: Changelog-ACCESS
WebKitLibraries_0.18.0/cairo/: config.h
WebKitLibraries_1.18.3/cairo/: ChangeLog  ChangeLog.pre-1.10  ChangeLog.pre-1.12  ChangeLog.pre-1.14  ChangeLog.pre-1.16  ChangeLog.pre-1.2  ChangeLog.pre-1.4  Changelog-ACCESS  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h  configure.ac
WebKitLibraries_1.18.3/cairo/doc/public/: Makefile.in
WebKitLibraries_1.18.3/cairo/doc/public/html/: bindings-path.html  bindings-patterns.html  cairo-Error-handling.html  cairo-FreeType-Fonts.html  cairo-PNG-Support.html  cairo-Quartz-(CGFont)-Fonts.html  cairo-Quartz-Surfaces.html  cairo-Recording-Surfaces.html  cairo-Regions.html  cairo-SVG-Surfaces.html  cairo-Script-Surfaces.html  cairo-Version-Information.html  cairo-XLib-XRender-Backend.html  cairo-cairo-device-t.html  cairo-cairo-pattern-t.html  cairo-fonts.html  cairo-surfaces.html  index-1.12.html  index-1.2.html  index-1.4.html  index-1.6.html
WebKitLibraries_1.18.3/cairo/doc/public/xml/: cairo-device.xml  cairo-font-options.xml  cairo-matrix.xml  cairo-pdf.xml  cairo-png.xml  cairo-ps.xml  cairo-quartz.xml  cairo-scaled-font.xml  cairo-status.xml  cairo-surface-observer.xml  cairo-surface.xml  cairo-user-fonts.xml  cairo-version.xml  cairo-win32.xml  cairo-xcb.xml
WebKitLibraries_1.18.3/cairo/src/: cairo-image-compositor.c  cairo-toy-font-face.c  cairo.c  cairo.h
WebKitLibraries_1.19.3/cairo/: ChangeLog.pre-1.6
WebKitLibraries_2.20.4/cairo/: version.py
WebKitLibraries_2.20.5/cairo/: meson_options.txt
WebKitLibraries_2.20.5/cairo/doc/public/html/: bindings-errors.html
WebKitLibraries_2.20.5/cairo/doc/public/xml/: cairo-pattern.xml  cairo-text.xml  cairo-xlib-xrender.xml
WebKitLibraries_2.20.5/cairo/src/: cairo-compiler-private.h  cairo-gl-device.c  cairo-image-source.c
WebKitLibraries_2.22.5/cairo/: configure
WebKitLibraries_2.23.3/cairo/: meson.build
WebKitLibraries_2.23.3/cairo/doc/public/html/: bindings-return-values.html  bindings-streams.html  bindings-surfaces.html  cairo-Image-Surfaces.html  cairo-Transformations.html  cairo-cairo-font-face-t.html  cairo-cairo-matrix-t.html  cairo-cairo-scaled-font-t.html  cairo.devhelp2  index-1.10.html  language-bindings.html
WebKitLibraries_2.23.3/cairo/doc/public/xml/: cairo-paths.xml  cairo-script.xml  cairo-tag.xml  cairo-transforms.xml  cairo-win32-fonts.xml  cairo-xlib.xml
WebKitLibraries_2.23.6/cairo/: ChangeLog.pre-1.0  ChangeLog.pre-1.8  RELEASING  config.h.in
include_0.19.0/wkc/: wkcaudioprocs.h  wkcconfig.h  wkccustomjs.h  wkcfileprocs.h  wkcmediaprocs.h
include_1.18.3/wkc/: wkcconfig.h  wkcmediaprocs.h
include_1.19.3/utils/: nxDebugPrint.h
include_1.19.3/wkc/: wkcconfig.h
nspr/: .hgtags
nss/: .hgtags
src/.ndi/: rocrt_nro.cpp.ndi
src/NX-NXFP2-a32/: rocrt.AssemblyOffset.h
src/NX-NXFP2-a64/: rocrt.AssemblyOffset.h
src_0.13.2/NX-NXFP2-a32/: rocrt.AssemblyOffset.h
src_0.13.2/NX-NXFP2-a64/: rocrt.AssemblyOffset.h
src_0.15.0/: crtend.arm.S
src_0.16.0/: crtend.aarch64.S
src_0.18.0/: rocrt_nro.cpp
src_0.19.0/: crtend.arm.S  rocrt_Init_nro.arm.S
src_0.22.0/: crtend.aarch64.S
src_0.23.2/: rocrt_Init_nro.aarch64.S  rocrt_Init_nro.arm.S
src_0.23.2/NX-NXFP2-a32/: rocrt.AssemblyOffset.h
src_0.23.2/NX-NXFP2-a64/: rocrt.AssemblyOffset.h
src_1.13.17/: crtend.aarch64.S  rocrt_Init_nro.aarch64.S  rocrt_Init_nro.arm.S
src_1.13.9/: rocrt_Init_nro.aarch64.S  rocrt_nro.cpp
src_1.15.4/: rocrt_LinkerSymbolGetter.cpp  rocrt_nro.cpp
src_1.16.10/: rocrt_LinkerSymbolGetter.cpp
src_1.16.10/NX-NXFP2-a32/: rocrt.AssemblyOffset.h
src_2.20.5/: rocrt_nro.cpp
src_2.21.5/: rocrt_Init_nro.arm.S  rocrt_nro.cpp
src_2.22.5/: rocrt_Init_nro.aarch64.S
src_2.23.6/: crtend.arm.S  rocrt_nro.cpp
src_2.23.6/NX-NXFP2-a32/: rocrt.AssemblyOffset.h
src_2.23.6/NX-NXFP2-a64-cfi/: rocrt.AssemblyOffset.h
webkit/JavaScriptCore/: ChangeLog  DerivedSources.make
webkit/WTF/: ChangeLog
webkit/WebCore/: CMakeLists.txt  ChangeLog  ChangeLog-2013-10-13  DerivedSources.cpp  DerivedSources.make  WebCore.order
webkit_0.13.1/WebCore/: ChangeLog
webkit_0.13.2/WebCore/: Info.plist
webkit_0.15.0/WebCore/: WebCore.order
webkit_0.16.0/JavaScriptCore/: CMakeLists.txt  ChangeLog  ChangeLog-2012-10-02  ChangeLog-2013-04-24  ChangeLog-2013-10-13  ChangeLog-2014-10-07  ChangeLog-2015-07-23  JavaScriptCore.order  create_hash_table  jsc.cpp
webkit_0.16.0/WebCore/: CMakeLists.txt  ChangeLog-2010-05-24  ChangeLog-2014-02-20  DerivedSources.make
webkit_0.16.0/WebInspectorUI/: ChangeLog
webkit_0.18.0/JavaScriptCore/: ChangeLog-2014-02-20  Info.plist
webkit_0.18.0/WebCore/: ChangeLog
webkit_0.23.0/JavaScriptCore/: ChangeLog-2012-05-22
webkit_0.23.0/WebCore/: config.h
webkit_1.13.11/JavaScriptCore/: ChangeLog
webkit_1.13.11/WebCore/: ChangeLog  DerivedSources.make
(+8397 files in other folders)
